--- a/todo-list-project/styles.css
+++ b/todo-list-project/styles.css
@@ -142,6 +142,7 @@ form.todo-form {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 20px;
 }
 
 div.input-container {
